--- a/styles/style.css
+++ b/styles/style.css
@@ -7,44 +7,68 @@ html {
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-family: open sans;
-  color: #10214e;
+  height: 100%;
+  font-family: 'Audiowide', sans-serif;
+  background-image: url(../assets/patroon_licht.png);
 }
 
 article {
-  position: relative;
+  
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  width: 50vw;
-  max-width: 25em;
-  min-width: 20em;
-  border-radius: 1rem;
-  background: rgb(0,239,255);
-  background: linear-gradient(0deg, rgba(0,239,255,1) 40%, #4e54c8 100%);
-  box-shadow: 0 0 20px 20px rgba(0,0,0,.1);
-  transition: .25s;
+  width: 50%;
+  border: 3px groove #03f1f1;
+  margin: auto;
+  border-radius: 2rem;
+  color: white;
+  background-color: #10ebebdc;;
+
 }
 
 header {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  justify-content: flex-end;
+  margin: 2.5em;
+  
 }
 
-h1 {
-  margin: 2rem 0 1rem;
-  color: rgba(0,239,255,1);
+figure img {
+
+  width: 350px;
+  height: 550px;
+  border: 1rem;
 }
 
-button {
+figure {
+  border: 1rem;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+.glow {
+  color: #fff;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #008080, 0 0 40px #008080, 0 0 50px #04f7f7, 0 0 60px #04f7f7, 0 0 70px #08ffff;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #008080, 0 0 50px #008080, 0 0 60px #04f7f7, 0 0 70px #04f7f7, 0 0 80px #08ffff;
+  }
+}
+
+
+
+/* button {
   position: absolute;
   right: 1rem;
   top: 1rem;
@@ -63,73 +87,8 @@ button:focus {
 }
 button:focus svg {
   stroke: rgba(0,239,255,1);
-}
+} */
 
-svg {
-  position: absolute;
-  top: calc(1.25rem - 12px);
-  left: calc(1.25rem - 12px);
-  stroke: #4e54c8;
-  transition-delay: .25s;
-}
-button svg:nth-of-type(2) {
-  opacity: 0;
-  transition-delay: 0ms;
-}
-
-img {
-  position: relative;
-  top: 2rem;
-  width: 10em;
-  height: auto;
-  border: 5px solid #fff;
-  border-radius: 10em;
-  box-shadow: 0 0 2px 2px rgba(0,0,0,.2);
-  transition: .25s .15s;
-}
-
-dl {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas:
-    "html-dd css-dd js-dd"
-    "html-dt css-dt js-dt"
-    ;
-  justify-items: center;
-  align-items: start;
-  width: 100%;
-  margin-top: -3rem;
-  margin-bottom: 0;
-  padding: 5rem 0 3rem;
-  text-align: center;
-  background: rgb(255,255,255);
-}
-
-dt {
-  margin-top: .25rem;
-  padding-top: .25rem;
-  border-top: 1px solid rgba(0,0,0,0.3);
-  font-weight: bold;
-}
-dt:nth-of-type(1) {
-  grid-area: html-dt;
-}
-dt:nth-of-type(2) {
-  grid-area: css-dt;
-  transform: translateY(1rem);
-}
-dt:nth-of-type(3) {
-  grid-area: js-dt;
-}
-
-dd {
-  margin: 0;
-  padding-left: .3rem;
-  transition: .25s .3s;
-}
-dd:nth-of-type(2){  
-  transform: translateY(1rem);
-}
 
 p { 
   margin: 0;
