--- a/styles/style.css
+++ b/styles/style.css
@@ -96,22 +96,74 @@ section {
   justify-content: flex-end;
   align-items: flex-start;
   position: relative;
-  
-  
 }
 
+nav a{
+  position: relative;
+  display: inline-block;
+  margin: 15px 25px;
+  outline: none;
+  color:#fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  text-shadow: 0 0 1px rgba(255,255,255,0.3);
+  font-size: .95em;
+}
+
+nav a:hover,
+nav a:focus {
+  outline: none;
+}
+
+.effect a {
+  margin: 0 10px;
+  padding: 10px 20px;
+}
+
+.effect a::before{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  content: '';
+  transition: top 0.3s;
+}
+
+.effect a::after{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 2px;
+  height: 2px;
+  background: #fff;
+  content: '';
+  transition: height 0.3s;
+}
+
+.effect a:hover::before{
+  top: 100%;
+  opacity: 1;
+}
+
+.effect a:hover::after{
+  height: 100%;
+}
  #logo {
 position: absolute;
 top:8px;
 right: 15px;
-padding: 1em;
+/* padding: 1em; */
 width: 200px;
 height: 175px;
 }
 
-section p {
+/* section p {
   padding: .5em;
-}
+} */
 
 ul {
   list-style-type: none;
