--- a/styles/style.css
+++ b/styles/style.css
@@ -8,85 +8,85 @@ html {
 
 body {
   height: 100%;
-  font-family: 'Audiowide', sans-serif;
+  font-family: "Audiowide", sans-serif;
   /* background-color: #202424dc; */
-  background: #0F2027;
+  background: #0f2027;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
 
 article {
-/*onderstaande properties zorgen ervoor dat het kaartje gecentreerd staat op grotere schermen*/
+  /*onderstaande properties zorgen ervoor dat het kaartje gecentreerd staat op grotere schermen*/
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  width: 60%;
+  width: 70%;
   border: 5px groove #03f1f1;
-  margin: auto;/*zet alles gecentreerd*/
+  margin: auto; /*zet alles gecentreerd*/
   border-radius: 2rem;
   color: white;
- /*Ik heb hier een achtergrond kleur neergezet, voor het geval de afbeelding niet kan laden*/
+  /*Ik heb hier een achtergrond kleur neergezet, voor het geval de afbeelding niet kan laden*/
   background-color: #10ebebdc;
-  background-image: url(../assets/patroon_donker.png);
+  background-image: url(../assets/patroon_licht.png);
   background-repeat: no-repeat;
   background-size: cover;
   /*Ik heb hier een box shadow geplaatst om mijn visitekaartje naar voren te laten komen*/
-  -webkit-box-shadow: 15px 15px 5px 0px rgba(97,97,97,0.7);
-  -moz-box-shadow: 15px 15px 5px 0px rgba(97,97,97,0.7);
-  box-shadow: 15px 15px 5px 0px rgba(97,97,97,0.7);
-
-
-
-
+  -webkit-box-shadow: 15px 15px 5px 0px rgba(97, 97, 97, 0.7);
+  -moz-box-shadow: 15px 15px 5px 0px rgba(97, 97, 97, 0.7);
+  box-shadow: 15px 15px 5px 0px rgba(97, 97, 97, 0.7);
 }
 
 /*Ik heb hier een border radius gegeven, zodat er samenhang zit met de border radius van de article tag*/
 figure img {
-
-  height: 550px; 
+  height: 550px;
   border: 3px solid #30ffff;
   border-radius: 25px;
   
 }
 
 figure {
-  
   border-radius: 20px;
   width: 50%;
+  margin: auto;
 }
+
 figcaption {
-  margin: 10px;
-  font-size: 1.3em;
-
+  margin: 2em;
+  font-size: 1.5em;
 }
 
-.typewriter  {
+.typewriter {
   color: #fff;
-  font-family:  'Audiowide', sans-serif;
+  font-family: "Audiowide", sans-serif;
   overflow: hidden;
-  border-right: .15em solid #04f7f7;
+  border-right: 0.15em solid #04f7f7;
   white-space: nowrap;
   margin: 0 auto;
-  letter-spacing: .10em; /* Adjust as needed */
-  animation: 
-  typing 5.5s steps(25, end),
-  blink-caret .5s step-end infinite;
+  letter-spacing: 0.1em; /* Adjust as needed */
+  animation: typing 5.5s steps(40, end), blink-caret 1.5s step-end infinite;
 }
 
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
-
 @keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: #04f7f7 }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #04f7f7;
+  }
 }
 
 section {
@@ -96,20 +96,21 @@ section {
   justify-content: flex-end;
   align-items: flex-start;
   position: relative;
+  margin: 2em;
 }
 
-nav a{
+nav a {
   position: relative;
   display: inline-block;
   margin: 15px 25px;
   outline: none;
-  color:#fff;
+  color: #fff;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 400;
-  text-shadow: 0 0 1px rgba(255,255,255,0.3);
-  font-size: .95em;
+  text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+  font-size: 0.95em;
   padding: 1em;
 }
 
@@ -123,51 +124,73 @@ nav a:focus {
   padding: 10px 20px;
 }
 
-.effect a::before{
+.effect a::before {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 2px;
-  background: #fff;
-  content: '';
+  background: #04f7f7;
+  content: "";
   transition: top 0.3s;
 }
 
-.effect a::after{
+.effect a::after {
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
   width: 2px;
   height: 2px;
-  background: #fff;
-  content: '';
+  background: #04f7f7;
+  content: "";
   transition: height 0.3s;
 }
 
-.effect a:hover::before{
+.effect a:hover::before {
   top: 100%;
   opacity: 1;
 }
 
-.effect a:hover::after{
+.effect a:hover::after {
   height: 100%;
 }
- #logo {
-position: absolute;
-bottom:4em;
-right: 2em;
-/* padding: 1em; */
-width: 180px;
-height: 145px;
+
+#logo {
+  margin: auto; 
+  padding: 1.9em;
+  height: 250px;
+
 }
-
-
 
 ul {
   list-style-type: none;
   margin: 0;
+  padding: 0;
+  font-size: 1.2em;
+  display: block;
+  padding-bottom: 2em;
+}
+
+li {
+  border-bottom: 1px solid #ccc;
+  letter-spacing: 1px;
+}
+
+li:hover {
+  color: #fff;
+  background: #30ffff;
+  cursor: pointer;
+  font-size: 1.15em;
+}
+
+li:last-child {
+  border: none;
+}
+
+ul li {
+  margin: 1em;
   text-align: left;
+  text-transform: capitalize;
 }
 
 
@@ -175,6 +198,13 @@ ul {
 /*De kop heb ik een "glowing" animation gegeven die 1 seconde duurt*/
 h1 {
   font-size: 3.5em;
+  letter-spacing: 3px;
+  margin: 10px;
+}
+
+h2 {
+  letter-spacing: 3px;
+  margin: 10px;
 }
 
 .glow {
@@ -186,63 +216,20 @@ h1 {
 
 @-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #008080, 0 0 40px #008080, 0 0 50px #04f7f7, 0 0 60px #04f7f7, 0 0 70px #08ffff;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #008080,
+      0 0 40px #008080, 0 0 50px #04f7f7, 0 0 60px #04f7f7, 0 0 70px #08ffff;
   }
 
   to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #008080, 0 0 50px #008080, 0 0 60px #04f7f7, 0 0 70px #04f7f7, 0 0 80px #08ffff;
+    text-shadow: 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #008080,
+      0 0 50px #008080, 0 0 60px #04f7f7, 0 0 70px #04f7f7, 0 0 80px #08ffff;
   }
 }
-/*Button krijgt nog een transition en dropdown met behulp van pseudo selectors*/
-#neon {
-  background-color: #04f7f7;
-  border: 2px solid #0f3c3c;
-  color: #fff;
-  padding: 1em;
-  border-radius: 50px;
-  font-family: 'Audiowide', sans-serif;
-  font-size: 1em;
-  margin: 10px;
-}
-
 
 p {
   margin: 10px;
   line-height: 1.6;
+  font-family: 'Audiowide', sans-serif;
+  letter-spacing: 1px;
 }
 
-/* article > p {
-  width: 100%;
-  padding: 3rem 2rem;
-  border-radius: 0 0 1rem 1rem;
-  text-align: center;
-  background: rgba(255,255,255, 0.5);
-} */
-
-/* expand content */
-/* body.expand {
-  font-size: 1.15em;
-}
-
-body.expand article {
-  width: 60vw;
-  max-width: 60vw;
-}
-
-body.expand button svg:first-of-type {
-  opacity: 0;
-  transition-delay: 0ms;
-}
-
-body.expand button svg:nth-of-type(2) {
-  opacity: 1;
-  transition-delay: .25s;
-}
-
-body.expand dd {
-  font-size: 1.75em;
-}
-
-body.expand img {
-  width: 15em;
-} */
