--- a/styles/style.css
+++ b/styles/style.css
@@ -21,17 +21,17 @@ body {
 article {
   /*onderstaande properties zorgen ervoor dat het kaartje gecentreerd staat op grotere schermen*/
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  width: 70%;
-  border: 5px groove #03f1f1;
-  margin: auto; /*zet alles gecentreerd*/
-  border-radius: 2rem;
+  flex-direction: row; /*zet alles naast elkaar*/
+  align-items: center; /*centreert alle elementen binnen het article element*/
+  justify-content: flex-start; /*laat de content bij het begin beginnen*/
+  width: 70%; /*neemt 70% van het scherm in*/
+  border: 5px groove #03f1f1; /*geeft een soort 3d-effect*/
+  margin: auto; /*zet alles gecentreerd op scherm*/
+  border-radius: 2rem; /*geeft rounde corners*/
   color: white;
   /*Ik heb hier een achtergrond kleur neergezet, voor het geval de afbeelding niet kan laden*/
   background-color: #10ebebdc;
-  background-image: url(../assets/patroon_licht.png);
+  background-image: url(../assets/patroon_donker.png);
   background-repeat: no-repeat;
   background-size: cover;
   /*Ik heb hier een box shadow geplaatst om mijn visitekaartje naar voren te laten komen*/
@@ -40,11 +40,12 @@ article {
   box-shadow: 15px 15px 5px 0px rgba(97, 97, 97, 0.7);
 }
 
+
 /*Ik heb hier een border radius gegeven, zodat er samenhang zit met de border radius van de article tag*/
 figure img {
   height: 550px;
   border: 3px solid #30ffff;
-  border-radius: 25px;
+  border-radius: 25px; /*Border geeft op het oog zichtbaar effect dat het in de border van het article element past*/
   
 }
 
@@ -67,7 +68,7 @@ figcaption {
   white-space: nowrap;
   margin: 0 auto;
   letter-spacing: 0.1em; /* Adjust as needed */
-  animation: typing 5.5s steps(40, end), blink-caret 1.5s step-end infinite;
+  animation: typing 5.5s steps(40, end), blink-caret 1.5s step-end infinite; /*geeft een typende animatie weer*/
 }
 
 @keyframes typing {
@@ -90,9 +91,9 @@ figcaption {
 }
 
 section {
-  width: 50%;
+  width: 50%; /*delen elk de helft binnen het article element*/
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /*zet alles onder elkaar*/
   justify-content: flex-end;
   align-items: flex-start;
   position: relative;
@@ -101,7 +102,7 @@ section {
 
 nav a {
   position: relative;
-  display: inline-block;
+  display: inline-block; /*zet alle linkjes elkaar*/
   margin: 15px 25px;
   outline: none;
   color: #fff;
@@ -124,6 +125,7 @@ nav a:focus {
   padding: 10px 20px;
 }
 
+/*weergeeft een blauwe streep*/
 .effect a::before {
   position: absolute;
   top: 0;
@@ -135,6 +137,7 @@ nav a:focus {
   transition: top 0.3s;
 }
 
+/*geeft een border links en onder de link als eroverheen gescrolld is*/
 .effect a::after {
   position: absolute;
   top: 0;
@@ -155,12 +158,6 @@ nav a:focus {
   height: 100%;
 }
 
-#logo {
-  margin: auto; 
-  padding: 1.9em;
-  height: 250px;
-
-}
 
 ul {
   list-style-type: none;
@@ -176,13 +173,15 @@ li {
   letter-spacing: 1px;
 }
 
+/*tekst wordt groter wanneer er gescrolld wordt*/
 li:hover {
   color: #fff;
-  background: #30ffff;
+  background: transparent;
   cursor: pointer;
   font-size: 1.15em;
 }
 
+/*geeft het laatste list item geen border*/
 li:last-child {
   border: none;
 }
@@ -228,8 +227,9 @@ h2 {
 
 p {
   margin: 10px;
-  line-height: 1.6;
+  line-height: 1.6; /*weergeeft een betere afstand tussen de regels van de tekst*/
   font-family: 'Audiowide', sans-serif;
   letter-spacing: 1px;
+  
 }
 
