--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ body {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 article {
